--- a/index.html
+++ b/index.html
@@ -2,43 +2,40 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Enhanced Cloth Simulation with Self-Collision & Point Dragging</title>
+    <title>Enhanced Cloth Simulation – Educational</title>
     <!-- p5.js library -->
     <script src="https://cdn.jsdelivr.net/npm/p5@1.5.0/lib/p5.min.js"></script>
   </head>
   <body>
     <script>
-      // Grid parameters.
+      // --- Global Variables & Arrays ---
       let cols = 30;
       let rows = 20;
       let spacing = 20;
-
-      // Arrays for simulation points and constraints.
       let clothPoints = [];
       let clothConstraints = [];
+      // 2D arrays for different sets of points:
+      let grid = [];       // grid corners
+      let horizontal = []; // horizontal midpoints (between grid corners)
+      let vertical = [];   // vertical midpoints
+      let centers = [];    // center of each cell
 
-      // 2D arrays for indices of:
-      // - grid: corner points
-      // - horizontal: midpoints on horizontal edges
-      // - vertical: midpoints on vertical edges
-      // - centers: center point of each cell
-      let grid = [];
-      let horizontal = [];
-      let vertical = [];
-      let centers = [];
-
-      // Simulation parameters (default values controlled by sliders).
+      // Simulation parameters (default values updated by sliders)
       let friction = 0.98;
       let iterations = 5;
       let gravity = 0.4;
       let weight = 1.0;
+      let windAmplitude = 0.2; // wind amplitude (will be controlled by slider)
 
-      // Additional parameters for self-collision.
-      let collisionThreshold = spacing * 0.5;  // e.g., 10 pixels if spacing is 20
-      let repulsionFactor = 0.5; // How strongly to push points apart when colliding
+      // Additional parameters for self-collision:
+      let collisionThreshold = spacing * 0.5;  
+      let repulsionFactor = 0.5;
 
-      // UI elements.
-      let frictionSlider, iterationsSlider, gravitySlider, weightSlider;
+      // Obstacle parameters:
+      let obstacleX, obstacleY, obstacleRadius;
+
+      // UI elements (sliders and buttons)
+      let frictionSlider, iterationsSlider, gravitySlider, weightSlider, windSlider;
       let resetButton;
 
       // For point dragging.
@@ -46,14 +43,12 @@
 
       function setup() {
         createCanvas(windowWidth, windowHeight);
-
-        // Create a reset button.
+        // --- Create UI Controls ---
         resetButton = createButton("Reset Cloth");
         resetButton.position(20, 20);
         resetButton.style("font-size", "16px");
         resetButton.mousePressed(resetCloth);
 
-        // Create sliders.
         frictionSlider = createSlider(0.90, 1.0, 0.98, 0.01);
         frictionSlider.position(20, 60);
         frictionSlider.style("width", "200px");
@@ -70,10 +65,22 @@
         weightSlider.position(20, 180);
         weightSlider.style("width", "200px");
 
+        windSlider = createSlider(0, 1, 0.2, 0.01);
+        windSlider.position(20, 220);
+        windSlider.style("width", "200px");
+
+        // Place the obstacle (for collision demonstration)
+        obstacleX = width / 2;
+        obstacleY = 600;
+        obstacleRadius = 80;
+
         setupCloth();
       }
 
-      // Sets up the cloth simulation with cells subdivided into 8 triangles.
+      // --- Setup Cloth ---
+      // We create a grid of corner points (with the top row pinned), then compute midpoints
+      // and cell centers. After basic structural constraints are added, we add bending constraints
+      // (connecting points two apart) and subdivide each cell into 8 triangles.
       function setupCloth() {
         clothPoints = [];
         clothConstraints = [];
@@ -82,9 +89,9 @@
         vertical = [];
         centers = [];
 
-        // Position the cloth centered horizontally and leave room for the UI.
+        // Place the cloth so that UI stays above it.
         let startX = width / 2 - (cols - 1) * spacing / 2;
-        let startY = 220;
+        let startY = 300;  // cloth starts lower
 
         // 1. Create grid corner points.
         for (let y = 0; y < rows; y++) {
@@ -92,7 +99,7 @@
           for (let x = 0; x < cols; x++) {
             let px = startX + x * spacing;
             let py = startY + y * spacing;
-            // Pin the top row so the cloth hangs.
+            // Pin the top row.
             let pinned = (y === 0);
             clothPoints.push({ x: px, y: py, oldx: px, oldy: py, pinned: pinned });
             grid[y][x] = clothPoints.length - 1;
@@ -148,7 +155,7 @@
           }
         }
 
-        // (Optional) Add basic grid constraints between adjacent corner points.
+        // 5. (Optional) Add basic grid constraints (adjacent corner points).
         for (let y = 0; y < rows; y++) {
           for (let x = 0; x < cols; x++) {
             let idx = grid[y][x];
@@ -161,19 +168,41 @@
           }
         }
 
-        // 5. Subdivide each cell into 8 triangles.
-        // For cell at (y,x): corners (A, B, C, D); midpoints (E: top, F: bottom, G: left, H: right); center (I).
+        // 6. Add bending constraints between grid corners two apart.
+        for (let y = 0; y < rows; y++) {
+          for (let x = 0; x < cols - 2; x++) {
+            let idx1 = grid[y][x];
+            let idx2 = grid[y][x + 2];
+            addConstraint(idx1, idx2, spacing * 2);
+          }
+        }
+        for (let y = 0; y < rows - 2; y++) {
+          for (let x = 0; x < cols; x++) {
+            let idx1 = grid[y][x];
+            let idx2 = grid[y + 2][x];
+            addConstraint(idx1, idx2, spacing * 2);
+          }
+        }
+
+        // 7. Subdivide each cell into 8 triangles.
+        // For each cell at (y,x), let:
+        //   A = grid[y][x], B = grid[y][x+1], C = grid[y+1][x], D = grid[y+1][x+1]
+        //   E = horizontal[y][x] (top midpoint)
+        //   F = horizontal[y+1][x] (bottom midpoint)
+        //   G = vertical[y][x] (left midpoint)
+        //   H = vertical[y][x+1] (right midpoint)
+        //   I = centers[y][x] (cell center)
         for (let y = 0; y < rows - 1; y++) {
           for (let x = 0; x < cols - 1; x++) {
             let A = grid[y][x];
             let B = grid[y][x + 1];
             let C = grid[y + 1][x];
             let D = grid[y + 1][x + 1];
-            let E = horizontal[y][x];        // top midpoint
-            let F = horizontal[y + 1][x];      // bottom midpoint
-            let G = vertical[y][x];            // left midpoint
-            let H = vertical[y][x + 1];        // right midpoint
-            let I = centers[y][x];             // cell center
+            let E = horizontal[y][x];
+            let F = horizontal[y + 1][x];
+            let G = vertical[y][x];
+            let H = vertical[y][x + 1];
+            let I = centers[y][x];
 
             // Top-left corner triangles.
             addConstraint(A, E, distBetween(A, E));
@@ -214,7 +243,7 @@
         }
       }
 
-      // Helper: adds a constraint if it doesn't already exist.
+      // --- Helper Functions ---
       function addConstraint(i, j, len) {
         let a = min(i, j);
         let b = max(i, j);
@@ -224,13 +253,13 @@
         clothConstraints.push({ p1: a, p2: b, length: len });
       }
 
-      // Helper: compute distance between two points (given their indices).
       function distBetween(i1, i2) {
         let p1 = clothPoints[i1];
         let p2 = clothPoints[i2];
         return sqrt(sq(p2.x - p1.x) + sq(p2.y - p1.y));
       }
 
+      // --- Main Draw Loop ---
       function draw() {
         background(30);
 
@@ -239,8 +268,14 @@
         iterations = iterationsSlider.value();
         gravity = gravitySlider.value();
         weight = weightSlider.value();
+        windAmplitude = windSlider.value();
 
         updateCloth();
+
+        // Draw obstacle.
+        noStroke();
+        fill(100, 100, 255, 150);
+        ellipse(obstacleX, obstacleY, obstacleRadius * 2);
 
         // Draw constraints.
         stroke(255);
@@ -258,7 +293,7 @@
           ellipse(p.x, p.y, 4, 4);
         }
 
-        // Display slider labels.
+        // Display slider labels and parameter values.
         fill(255);
         noStroke();
         textSize(16);
@@ -266,20 +301,25 @@
         text("Iterations: " + iterations, 240, 115);
         text("Gravity: " + nf(gravity, 1, 2), 240, 155);
         text("Weight: " + nf(weight, 1, 2), 240, 195);
+        text("Wind: " + nf(windAmplitude, 1, 2), 240, 235);
+
+        // Educational overlay.
         textAlign(CENTER, CENTER);
-        text("Touch/drag to poke or drag points. Press 'Reset Cloth' to restart.", width / 2, 40);
+        text("Enhanced Cloth Simulation\n(Bending constraints, wind force, obstacle collision,\nself‑collision & point dragging)", width / 2, 40);
       }
 
-      // Main simulation update: Verlet integration, constraint relaxation, and self-collision.
+      // --- Simulation Update ---
       function updateCloth() {
-        // Verlet integration.
+        // Verlet integration with wind.
         for (let p of clothPoints) {
           if (!p.pinned) {
             let vx = (p.x - p.oldx) * friction;
             let vy = (p.y - p.oldy) * friction;
             p.oldx = p.x;
             p.oldy = p.y;
-            p.x += vx;
+            // Wind force oscillates over time.
+            let windForce = sin(frameCount * 0.01) * windAmplitude;
+            p.x += vx + windForce;
             p.y += vy + gravity * weight;
           }
         }
@@ -304,11 +344,12 @@
             }
           }
         }
-        // Self-collision: push points apart if they get too close.
+        // Self-collision: push points apart if too close.
         doSelfCollision();
+        // Obstacle collision: push points out of the obstacle.
+        doObstacleCollision();
       }
 
-      // Simple self-collision: for each pair of points, if they are closer than the threshold, push them apart.
       function doSelfCollision() {
         for (let i = 0; i < clothPoints.length; i++) {
           for (let j = i + 1; j < clothPoints.length; j++) {
@@ -337,11 +378,26 @@
         }
       }
 
+      function doObstacleCollision() {
+        for (let p of clothPoints) {
+          if (!p.pinned) {
+            let dx = p.x - obstacleX;
+            let dy = p.y - obstacleY;
+            let d = sqrt(dx * dx + dy * dy);
+            let minDist = obstacleRadius + 4; // small margin
+            if (d < minDist) {
+              let angle = atan2(dy, dx);
+              p.x = obstacleX + cos(angle) * minDist;
+              p.y = obstacleY + sin(angle) * minDist;
+            }
+          }
+        }
+      }
+
       // --- Point Dragging ---
-      // When the user presses (mouse or touch), find a nearby point to drag.
       function mousePressed() {
-        // Only consider clicks/touches outside the UI area.
-        if (mouseY > 220) {
+        // Only allow dragging if the press is below the UI area.
+        if (mouseY > 250) {
           let nearestIndex = -1;
           let nearestDist = Infinity;
           for (let i = 0; i < clothPoints.length; i++) {
@@ -370,13 +426,14 @@
         dragPointIndex = null;
       }
 
-      // Reset simulation.
+      // --- Reset & Resize ---
       function resetCloth() {
         setupCloth();
       }
 
       function windowResized() {
         resizeCanvas(windowWidth, windowHeight);
+        obstacleX = width / 2;
         setupCloth();
       }
     </script>
