--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Enhanced Cloth Simulation – Educational</title>
+    <title>Enhanced Cloth Simulation – Wind & Educational Mode</title>
     <!-- p5.js library -->
     <script src="https://cdn.jsdelivr.net/npm/p5@1.5.0/lib/p5.min.js"></script>
     <style>
@@ -29,16 +29,14 @@
       let iterations = 5;
       let gravity = 0.4;
       let weight = 1.0;
-      
+      let windAmplitude = 0.2; // wind force amplitude
+
       // Additional parameters for self-collision.
       let collisionThreshold = spacing * 0.5;
       let repulsionFactor = 0.5;
 
-      // Obstacle parameters.
-      let obstacleX, obstacleY, obstacleRadius;
-
       // UI elements.
-      let frictionSlider, iterationsSlider, gravitySlider, weightSlider;
+      let frictionSlider, iterationsSlider, gravitySlider, weightSlider, windSlider;
       let resetButton;
 
       // For point dragging.
@@ -68,10 +66,9 @@
         weightSlider.position(20, 180);
         weightSlider.style("width", "200px");
 
-        // Place the obstacle for collision demonstration.
-        obstacleX = width / 2;
-        obstacleY = 600;
-        obstacleRadius = 80;
+        windSlider = createSlider(0, 1, 0.2, 0.01);
+        windSlider.position(20, 220);
+        windSlider.style("width", "200px");
 
         setupCloth();
       }
@@ -79,8 +76,8 @@
       // --- Setup Cloth Simulation ---
       // This function creates:
       // 1. A grid of corner points (with the top row pinned).
-      // 2. Horizontal and vertical midpoints and cell centers.
-      // 3. Structural constraints (between adjacent points), bending constraints (between points two apart),
+      // 2. Horizontal and vertical midpoints plus cell centers.
+      // 3. Structural constraints between adjacent points, bending constraints (between points two apart),
       //    and subdivides each cell into 8 triangles.
       function setupCloth() {
         clothPoints = [];
@@ -185,7 +182,7 @@
         }
 
         // 7. Subdivide each cell into 8 triangles.
-        // For a cell at (y,x), let:
+        // For cell at (y,x), let:
         //   A = grid[y][x], B = grid[y][x+1], C = grid[y+1][x], D = grid[y+1][x+1]
         //   E = horizontal[y][x] (top midpoint)
         //   F = horizontal[y+1][x] (bottom midpoint)
@@ -268,13 +265,9 @@
         iterations = iterationsSlider.value();
         gravity = gravitySlider.value();
         weight = weightSlider.value();
+        windAmplitude = windSlider.value();
 
         updateCloth();
-
-        // Draw obstacle.
-        noStroke();
-        fill(100, 100, 255, 150);
-        ellipse(obstacleX, obstacleY, obstacleRadius * 2);
 
         // Draw all constraints.
         stroke(255);
@@ -293,7 +286,6 @@
         }
 
         // --- Educational Overlay ---
-        // Display slider values and a brief description of simulation attributes.
         fill(255);
         noStroke();
         textSize(16);
@@ -302,12 +294,13 @@
           "Friction: " + nf(friction, 1, 2) + "\n" +
           "Iterations: " + iterations + "\n" +
           "Gravity: " + nf(gravity, 1, 2) + "\n" +
-          "Weight: " + nf(weight, 1, 2) + "\n\n" +
+          "Weight: " + nf(weight, 1, 2) + "\n" +
+          "Wind: " + nf(windAmplitude, 1, 2) + "\n\n" +
           "Attributes:\n" +
-          "- Structural Constraints: Keep grid points at fixed distances.\n" +
+          "- Structural Constraints: Maintain basic grid distances.\n" +
           "- Bending Constraints: Resist sharp folds for a natural drape.\n" +
           "- Self-Collision: Prevents cloth points from overlapping.\n" +
-          "- Obstacle Collision: Cloth drapes over the blue circle.\n" +
+          "- Wind Force: Applies a dynamic horizontal nudge (oscillating over time).\n" +
           "- Point Dragging: Click/tap (below UI) to grab and move a point.";
         text(info, 240, 60);
 
@@ -319,14 +312,16 @@
 
       // --- Simulation Update ---
       function updateCloth() {
-        // Verlet integration (without wind).
+        // Verlet integration with wind.
         for (let p of clothPoints) {
           if (!p.pinned) {
             let vx = (p.x - p.oldx) * friction;
             let vy = (p.y - p.oldy) * friction;
             p.oldx = p.x;
             p.oldy = p.y;
-            p.x += vx;
+            // Wind force oscillates over time.
+            let windForce = sin(frameCount * 0.01) * windAmplitude;
+            p.x += vx + windForce;
             p.y += vy + gravity * weight;
           }
         }
@@ -353,8 +348,6 @@
         }
         // Self-collision: gently repel points that are too close.
         doSelfCollision();
-        // Obstacle collision: push points out of the obstacle.
-        doObstacleCollision();
       }
 
       function doSelfCollision() {
@@ -380,22 +373,6 @@
                 p2.x += cos(angle) * overlap * repulsionFactor;
                 p2.y += sin(angle) * overlap * repulsionFactor;
               }
-            }
-          }
-        }
-      }
-
-      function doObstacleCollision() {
-        for (let p of clothPoints) {
-          if (!p.pinned) {
-            let dx = p.x - obstacleX;
-            let dy = p.y - obstacleY;
-            let d = sqrt(dx * dx + dy * dy);
-            let minDist = obstacleRadius + 4; // small margin
-            if (d < minDist) {
-              let angle = atan2(dy, dx);
-              p.x = obstacleX + cos(angle) * minDist;
-              p.y = obstacleY + sin(angle) * minDist;
             }
           }
         }
@@ -440,7 +417,6 @@
 
       function windowResized() {
         resizeCanvas(windowWidth, windowHeight);
-        obstacleX = width / 2;
         setupCloth();
       }
     </script>
