--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Enhanced Cloth Simulation – Wind & Educational Mode</title>
+    <title>Enhanced Cloth Simulation – Physical Attributes</title>
     <!-- p5.js library -->
     <script src="https://cdn.jsdelivr.net/npm/p5@1.5.0/lib/p5.min.js"></script>
     <style>
@@ -18,25 +18,31 @@
       let spacing = 20;
       let clothPoints = [];
       let clothConstraints = [];
-      // 2D arrays for various point groups.
+      // 2D arrays for different point groups.
       let grid = [];       // grid corner points
       let horizontal = []; // midpoints on horizontal edges
       let vertical = [];   // midpoints on vertical edges
       let centers = [];    // center of each cell
 
       // Simulation parameters (controlled by sliders).
-      let friction = 0.98;
+      let damping = 0.98;       // replaces friction (velocity damping)
       let iterations = 5;
       let gravity = 0.4;
       let weight = 1.0;
-      let windAmplitude = 0.2; // wind force amplitude
+      let windAmplitude = 0.2;
 
-      // Additional parameters for self-collision.
+      // New attributes:
+      let stretchFactor = 1.0;  // modulates rest length for structural constraints
+      let shearFactor = 1.0;    // scales desired length for diagonal (shear) constraints
+      let bendingFactor = 1.0;  // scales rest length for bending constraints
+
+      // Additional parameter for self‑collision.
       let collisionThreshold = spacing * 0.5;
       let repulsionFactor = 0.5;
 
       // UI elements.
-      let frictionSlider, iterationsSlider, gravitySlider, weightSlider, windSlider;
+      let dampingSlider, iterationsSlider, gravitySlider, weightSlider, windSlider;
+      let stretchSlider, shearSlider, bendingSlider;
       let resetButton;
 
       // For point dragging.
@@ -44,15 +50,16 @@
 
       function setup() {
         createCanvas(windowWidth, windowHeight);
+
         // --- Create UI Controls ---
         resetButton = createButton("Reset Cloth");
         resetButton.position(20, 20);
         resetButton.style("font-size", "16px");
         resetButton.mousePressed(resetCloth);
 
-        frictionSlider = createSlider(0.90, 1.0, 0.98, 0.01);
-        frictionSlider.position(20, 60);
-        frictionSlider.style("width", "200px");
+        dampingSlider = createSlider(0.90, 1.0, 0.98, 0.01);
+        dampingSlider.position(20, 60);
+        dampingSlider.style("width", "200px");
 
         iterationsSlider = createSlider(1, 10, 5, 1);
         iterationsSlider.position(20, 100);
@@ -70,6 +77,18 @@
         windSlider.position(20, 220);
         windSlider.style("width", "200px");
 
+        stretchSlider = createSlider(0.8, 1.2, 1.0, 0.01);
+        stretchSlider.position(20, 260);
+        stretchSlider.style("width", "200px");
+
+        shearSlider = createSlider(0.8, 1.2, 1.0, 0.01);
+        shearSlider.position(20, 300);
+        shearSlider.style("width", "200px");
+
+        bendingSlider = createSlider(0.8, 1.2, 1.0, 0.01);
+        bendingSlider.position(20, 340);
+        bendingSlider.style("width", "200px");
+
         setupCloth();
       }
 
@@ -77,8 +96,10 @@
       // This function creates:
       // 1. A grid of corner points (with the top row pinned).
       // 2. Horizontal and vertical midpoints plus cell centers.
-      // 3. Structural constraints between adjacent points, bending constraints (between points two apart),
-      //    and subdivides each cell into 8 triangles.
+      // 3. Basic structural constraints (between adjacent corners),
+      //    bending constraints (between points two apart),
+      //    and extra shear constraints (diagonals across cells).
+      // 4. Subdivides each cell into 8 triangles (for additional detail).
       function setupCloth() {
         clothPoints = [];
         clothConstraints = [];
@@ -87,9 +108,9 @@
         vertical = [];
         centers = [];
 
-        // Position the cloth so that UI remains above it.
+        // Position the cloth so the UI remains above it.
         let startX = width / 2 - (cols - 1) * spacing / 2;
-        let startY = 300; // cloth starts lower
+        let startY = 300;  // cloth starts lower
 
         // 1. Create grid corner points.
         for (let y = 0; y < rows; y++) {
@@ -152,15 +173,15 @@
           }
         }
 
-        // 5. Add basic structural constraints between adjacent corner points.
+        // 5. Add basic structural constraints between adjacent grid corners.
         for (let y = 0; y < rows; y++) {
           for (let x = 0; x < cols; x++) {
             let idx = grid[y][x];
             if (x < cols - 1) {
-              addConstraint(idx, grid[y][x + 1], spacing);
+              addConstraint(idx, grid[y][x + 1], spacing * stretchFactor);
             }
             if (y < rows - 1) {
-              addConstraint(idx, grid[y + 1][x], spacing);
+              addConstraint(idx, grid[y + 1][x], spacing * stretchFactor);
             }
           }
         }
@@ -170,35 +191,47 @@
           for (let x = 0; x < cols - 2; x++) {
             let idx1 = grid[y][x];
             let idx2 = grid[y][x + 2];
-            addConstraint(idx1, idx2, spacing * 2);
+            addConstraint(idx1, idx2, spacing * 2 * bendingFactor);
           }
         }
         for (let y = 0; y < rows - 2; y++) {
           for (let x = 0; x < cols; x++) {
             let idx1 = grid[y][x];
             let idx2 = grid[y + 2][x];
-            addConstraint(idx1, idx2, spacing * 2);
+            addConstraint(idx1, idx2, spacing * 2 * bendingFactor);
           }
         }
 
-        // 7. Subdivide each cell into 8 triangles.
-        // For cell at (y,x), let:
-        //   A = grid[y][x], B = grid[y][x+1], C = grid[y+1][x], D = grid[y+1][x+1]
-        //   E = horizontal[y][x] (top midpoint)
-        //   F = horizontal[y+1][x] (bottom midpoint)
-        //   G = vertical[y][x] (left midpoint)
-        //   H = vertical[y][x+1] (right midpoint)
-        //   I = centers[y][x] (cell center)
+        // 7. Add shear constraints for each cell (diagonals between grid corners).
+        for (let y = 0; y < rows - 1; y++) {
+          for (let x = 0; x < cols - 1; x++) {
+            let idxA = grid[y][x];       // top-left
+            let idxB = grid[y][x+1];       // top-right
+            let idxC = grid[y+1][x];       // bottom-left
+            let idxD = grid[y+1][x+1];     // bottom-right
+            addConstraint(idxA, idxD, sqrt(2) * spacing * shearFactor);
+            addConstraint(idxB, idxC, sqrt(2) * spacing * shearFactor);
+          }
+        }
+
+        // 8. Subdivide each cell into 8 triangles.
+        // For cell at (y,x): let
+        //   A = grid[y][x], B = grid[y][x+1], C = grid[y+1][x], D = grid[y+1][x+1],
+        //   E = horizontal[y][x] (top midpoint),
+        //   F = horizontal[y+1][x] (bottom midpoint),
+        //   G = vertical[y][x] (left midpoint),
+        //   H = vertical[y][x+1] (right midpoint),
+        //   I = centers[y][x] (cell center).
         for (let y = 0; y < rows - 1; y++) {
           for (let x = 0; x < cols - 1; x++) {
             let A = grid[y][x];
-            let B = grid[y][x + 1];
-            let C = grid[y + 1][x];
-            let D = grid[y + 1][x + 1];
+            let B = grid[y][x+1];
+            let C = grid[y+1][x];
+            let D = grid[y+1][x+1];
             let E = horizontal[y][x];
-            let F = horizontal[y + 1][x];
+            let F = horizontal[y+1][x];
             let G = vertical[y][x];
-            let H = vertical[y][x + 1];
+            let H = vertical[y][x+1];
             let I = centers[y][x];
 
             // Top-left corner triangles.
@@ -244,6 +277,7 @@
       function addConstraint(i, j, len) {
         let a = min(i, j);
         let b = max(i, j);
+        // Avoid duplicate constraints.
         for (let c of clothConstraints) {
           if (c.p1 === a && c.p2 === b) return;
         }
@@ -261,11 +295,14 @@
         background(30);
 
         // Update simulation parameters from sliders.
-        friction = frictionSlider.value();
+        damping = dampingSlider.value();
         iterations = iterationsSlider.value();
         gravity = gravitySlider.value();
         weight = weightSlider.value();
         windAmplitude = windSlider.value();
+        stretchFactor = stretchSlider.value();
+        shearFactor = shearSlider.value();
+        bendingFactor = bendingSlider.value();
 
         updateCloth();
 
@@ -290,18 +327,22 @@
         noStroke();
         textSize(16);
         textAlign(LEFT, TOP);
-        let info = 
-          "Friction: " + nf(friction, 1, 2) + "\n" +
+        let info =
+          "Damping: " + nf(damping, 1, 2) + "\n" +
           "Iterations: " + iterations + "\n" +
           "Gravity: " + nf(gravity, 1, 2) + "\n" +
           "Weight: " + nf(weight, 1, 2) + "\n" +
-          "Wind: " + nf(windAmplitude, 1, 2) + "\n\n" +
+          "Wind: " + nf(windAmplitude, 1, 2) + "\n" +
+          "Stretch: " + nf(stretchFactor, 1, 2) + "\n" +
+          "Shear: " + nf(shearFactor, 1, 2) + "\n" +
+          "Bending: " + nf(bendingFactor, 1, 2) + "\n\n" +
           "Attributes:\n" +
-          "- Structural Constraints: Maintain basic grid distances.\n" +
-          "- Bending Constraints: Resist sharp folds for a natural drape.\n" +
-          "- Self-Collision: Prevents cloth points from overlapping.\n" +
-          "- Wind Force: Applies a dynamic horizontal nudge (oscillating over time).\n" +
-          "- Point Dragging: Click/tap (below UI) to grab and move a point.";
+          "- Structural (Stretch): Maintains grid spacing (adjusted by Stretch).\n" +
+          "- Shear Constraints: Resist diagonal distortion (adjusted by Shear).\n" +
+          "- Bending Constraints: Resist sharp folds (adjusted by Bending).\n" +
+          "- Damping: Controls energy loss (smooths motion).\n" +
+          "- Wind: Applies a dynamic horizontal nudge.\n" +
+          "- Point Dragging: Click/tap (below UI) to move a point.";
         text(info, 240, 60);
 
         // Title.
@@ -315,8 +356,8 @@
         // Verlet integration with wind.
         for (let p of clothPoints) {
           if (!p.pinned) {
-            let vx = (p.x - p.oldx) * friction;
-            let vy = (p.y - p.oldy) * friction;
+            let vx = (p.x - p.oldx) * damping;
+            let vy = (p.y - p.oldy) * damping;
             p.oldx = p.x;
             p.oldy = p.y;
             // Wind force oscillates over time.
@@ -381,7 +422,7 @@
       // --- Point Dragging ---
       function mousePressed() {
         // Only allow dragging if click/touch is below the UI area.
-        if (mouseY > 250) {
+        if (mouseY > 360) {
           let nearestIndex = -1;
           let nearestDist = Infinity;
           for (let i = 0; i < clothPoints.length; i++) {
